plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
    id 'org.beryx.jlink' version '2.24.1'
}

group 'com.example'
version '1.0'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.8.2'
}

sourceCompatibility = '17'
targetCompatibility = '17'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'com.example.gman'
    mainClass = 'com.example.gman.MainApp'
}

javafx {
    version = '17.0.1'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")

    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'org.postgresql:postgresql:42.7.3'
    implementation 'org.mindrot:jbcrypt:0.4'
    implementation 'org.xerial:sqlite-jdbc:3.45.1.0'
    implementation 'org.slf4j:slf4j-simple:2.0.9'

}
tasks.withType(JavaExec) {
    modularity.inferModulePath = true
    jvmArgs = [
            '--add-opens', 'javafx.graphics/com.sun.javafx.application=com.example.gman',
            '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
    ]
}
test {
    useJUnitPlatform()
}

jlink {
    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")

    options = [
            '--strip-debug',
            '--compress', '2',
            '--no-header-files',
            '--no-man-pages'
    ]

    launcher {
        name = 'GMAN'
    }

    jpackage {
        icon = "src/main/resources/Imagenes/icon.ico"
        installerName = "GMAN"
        appVersion = "1.0"
    }
}

jlinkZip {
    group = 'distribution'

}
tasks.withType(JavaExec) {
    modularity.inferModulePath = true
    jvmArgs = [
            '--add-opens', 'javafx.graphics/com.sun.javafx.application=com.example.gman',
            '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
    ]
}